# movie-cockpit

./: .flake8  .gitignore  .project  .pylintrc  .style.yapf  .travis.yml  Doxyfile  Makefile.am  MovieCockpit.bb  README.md  configure.ac  moviecockpit.list  setup.cfg  xml2po.py
CONTROL/: control  postinst  postrm
Components/Converter/: MVCClockToText.py  MVCDiskSpaceInfo.py  MVCEventName.py  MVCMovieInfo.py  MVCRecordPosition.py  MVCServicePosition.py  MVCServiceTime.py
Components/Renderer/: MVCCover.py  MVCPositionGauge.py  MVCRunningText.py
Components/Sources/: MVCCurrentService.py  MVCServiceEvent.py
docs/: index.html  moviecockpit.sh
etc/: Makefile.am
po/: Makefile.am  MovieCockpit.pot  de.po  en.po
src/: About.py  AutoMount.py  Autoselect639Language.py  Bookmarks.py  CockpitPlayer.py  CockpitPlayerAudio.py  CockpitPlayerSubtitles.py  ConfigInit.py  ConfigScreen.py  ConfigScreenInit.py  ConfigStylesScreenInit.py  ConfigStylesSelection.py  CutList.py  CutListUtils.py  Debug.py  DebugInit.py  DelayTimer.py  DelayedFunction.py  EitFile.py  FileCache.py  FileCacheLoad.py  FileCacheLoadProgress.py  FileCacheReload.py  FileCacheSQL.py  FileListUtils.py  FileOp.py  FileOpManager.py  FileOpManagerProgress.py  FileOpManagerTask.py  FileOps.py  FileOpsProgress.py  FileProgress.py  FileUtils.py  InfoBarSupport.py  Loading.py  Makefile.am  MediaCenter.py  MediaTypes.py  MetaFile.py  MountManager.py  (+56 more)
src/img/: Makefile.am
src/skin/: ConfigScreen.xml  FileCacheLoadProgress.xml  FileCacheReload.xml  FileOpsProgress.xml  Makefile.am  MediaCenterLCD.xml  NoSupport.xml  (+12 more)
(+4 files in other folders)
