AC_INIT([MovieCockpit],[20170408],[https://github.com/dream-alpha/MovieCockpit/issues])
AM_INIT_AUTOMAKE([foreign])

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))
AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
src/Makefile
src/img/Makefile
src/skin/Makefile
Components/Makefile
Components/Converter/Makefile
Components/Renderer/Makefile
Components/Sources/Makefile
po/Makefile
])
AC_OUTPUT
